--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
             event.preventDefault();
             const proceed = confirm('Are you sure you want to proceed to the game? Remember, gambling can be addictive and harmful.');
             if (proceed) {
-                window.location.href = 'gogoturtle.betting.areyousure?.html';
+                window.location.href = 'gogoturtle.betting.areyousure.html';
             }
         });
 
@@ -735,7 +735,7 @@
         function navigateToGame() {
             const proceed = confirm('Are you sure you want to proceed to the game? Remember, gambling can be addictive and harmful.');
             if (proceed) {
-                window.location.href = 'gogoturtle.betting.areyousure?.html';
+                window.location.href = 'gogoturtle.betting.areyousure.html';
             }
         }
 
